--- a/src/console/CMakeLists.txt
+++ b/src/console/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories (${ACCASSIAS_SOURCE_DIR}) 
 
-add_library (t_console t_time.cpp t_console.cpp)
+add_library (t_console t_time.cpp t_print.cpp  t_console.cpp)
 
 
